alignment of compose button on linux fixes #3

--- a/styles/darkside.less
+++ b/styles/darkside.less
@@ -60,6 +60,10 @@ body {
   background-color: @sidebar;
 }
 
+.sheet-toolbar-container [data-column='0'] .item-container {
+  justify-content: flex-end;
+}
+
 .sheet-toolbar .btn.btn-toolbar.item-compose {
   margin-right: 0;
   background: transparent;
